feat: implement cross-platform performance management system including GUI settings, networking, and economy modules